# TuckdInTerrors_MonteCarloSim

./: .gitignore  PHASE_6_COMPLETION.md  README.md  ROADMAP.md  SCORECARD_FEATURE.md  SetupMyTuckInTerrorsSim.ps1  USER_GUIDE.md  WEB_QUICK_START.md  conftest.py  main.py  pyproject.toml  review.md
data/: cards.json  objectives.json
results/: run_01.json
src/tuck_in_terrors_sim/ai/: action_generator copy.py  action_generator.py  ai_player_base.py
src/tuck_in_terrors_sim/ai/ai_profiles/: greedy_ai.py  random_ai.py  scoring_ai.py
src/tuck_in_terrors_sim/game_elements/: card.py  data_loaders.py  enums.py  objective.py
src/tuck_in_terrors_sim/game_logic/: action_resolver.py  effect_engine.py  game_setup.py  game_state.py  nightmare_creep.py  turn_manager.py  win_loss_checker.py
src/tuck_in_terrors_sim/models/: game_action_model.py
src/tuck_in_terrors_sim/simulation/: analysis_engine.py  balance_analyzer.py  data_logger.py  scorecard_generator.py  simulation_runner.py  visualizer.py
src/tuck_in_terrors_sim/ui/: results_display.py
src/tuck_in_terrors_sim/utils/: shuffler.py
tests/: conftest.py
tests/ai/: test_action_generator.py  test_random_ai.py
tests/game_elements/: test_card.py  test_data_loaders.py  test_objective.py
tests/game_logic/: test_action_resolver.py  test_effect_engine.py  test_game_setup.py  test_game_state.py  test_nightmare_creep.py  test_turn_manager.py  test_win_loss_checker.py
web_app/: README.md  app.py  requirements.txt
web_app/static/js/: main.js
web_app/templates/: index.html  results.html
