[project]
name = "tuck_in_terrors_sim"
version = "0.1.0"
description = "Monte Carlo simulator for the Tuck'd-In Terrors card game."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pydantic>=2.0", # Ensure Pydantic is listed
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
# Example: run-sim = "tuck_in_terrors_sim.main:main_cli"

# Build system configuration (using Setuptools)
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Tell Setuptools where to find your package
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src" 
]
testpaths = [
    "tests",
]