[project]
name = "tuck_in_terrors_sim"
version = "0.3.1"
description = "Monte Carlo simulator for the Tuck'd-In Terrors card game."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pydantic>=2.0",
    "tqdm",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
run-sim = "main:main_cli"

# Build system configuration (using Setuptools)
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Tell Setuptools where to find your package
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]